tests/codegen/fail/object/derive_name_double_underscored.rs
use juniper::GraphQLObject;

#[derive(GraphQLObject)]
struct __Obj {
    id: String,
}

fn main() {}
